src/test/ui/feature-gate-negate-unsigned.stderr
error[E0600]: cannot apply unary operator `-` to type `usize`
  --> $DIR/feature-gate-negate-unsigned.rs:20:23
   |
LL |     let _max: usize = -1;
   |                       ^^
   |
   = note: an implementation of `std::ops::Neg` might be missing for `usize`

error[E0600]: cannot apply unary operator `-` to type `u8`
  --> $DIR/feature-gate-negate-unsigned.rs:24:14
   |
LL |     let _y = -x;
   |              ^^
   |
   = note: an implementation of `std::ops::Neg` might be missing for `u8`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0600`.
